<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen.SplashScreenActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imgSplash"
        android:layout_width="380dp"
        android:layout_height="390dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/splash_img"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSplash"
        android:orientation="vertical"
        android:layout_marginHorizontal="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/foodToBlow"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foodToBlowDes"
            android:textColor="@color/black500"
            android:textSize="16sp"
            android:textAlignment="center"
            android:fontFamily="@font/popinregular"
            android:layout_marginVertical="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:padding="18dp"
        android:fontFamily="@font/poppinsbold"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_background" />

</androidx.constraintlayout.widget.ConstraintLayout>