<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeScreen.HomeFragment"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="14dp"
        android:layout_marginVertical="10dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/deliverTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deliver_to"
            android:textSize="16sp"
            android:fontFamily="@font/poppinsbold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_sample"
            android:textSize="12sp"
            android:layout_below="@+id/deliverTxt"
            android:fontFamily="@font/popinregular"/>

        <ImageView
            android:id="@+id/profileBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/profile_img"
            android:visibility="gone"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llySearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlHeader"
        android:background="@drawable/search_bg"
        android:padding="4dp"
        android:layout_marginHorizontal="14dp"
        android:layout_marginVertical="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/search_normal"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"/>

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:background="@color/transparent"
            android:textSize="14sp"
            android:textColorHint="@color/black500"
            android:fontFamily="@font/popinregular"
            android:hint="@string/search_for_a_vendor_or_product"
            android:paddingVertical="4dp"
            android:layout_marginVertical="10dp"/>

    </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llySearch">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginVertical="14dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_restaurant"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppinsbold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_all"
                        android:textSize="12sp"
                        android:textColor="@color/black500"
                        android:fontFamily="@font/poppinsbold"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvRestaurants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_all_restaurants"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:padding="18dp"
                    android:fontFamily="@font/poppinsbold"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/btn_background"/>

            </LinearLayout>

        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>