<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dotted_border"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/restaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_pizza_place"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/popinregular"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="end">

                <androidx.cardview.widget.CardView
                    android:id="@+id/statusCardView"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    app:cardCornerRadius="50dp"
                    app:cardBackgroundColor="@color/yellow_progress"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/orderStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in_progress"
                    android:textSize="14sp"
                    android:textColor="@color/yellow_progress"
                    android:textStyle="bold"
                    android:fontFamily="@font/popinregular"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/orderNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="14sp"
            android:text="@string/sampleorderno"
            android:fontFamily="@font/popinregular"
            android:textColor="@color/order_no_grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:fontFamily="@font/popinregular"
            android:textColor="@color/order_no_grey"
            android:layout_weight="1"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:fontFamily="@font/popinregular"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textAlignment="textEnd"
            android:textColor="@color/order_no_grey"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/totalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="83.66"
                android:fontFamily="@font/poppinsbold"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:textAlignment="textEnd"
                android:fontFamily="@font/poppinsbold"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>