<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/restaurantCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="10dp">

        <ImageView
            android:id="@+id/restaurantImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/pizza_img"
            android:contentDescription="@string/todo" />



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fabCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        android:layout_marginBottom="-14dp"
        android:layout_marginEnd="-10dp"
        app:layout_constraintEnd_toEndOf="@+id/restaurantCardView"
        app:layout_constraintBottom_toBottomOf="@+id/restaurantCardView">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/fab_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fab_btn"/>
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/restaurantName"
        android:text="@string/the_pizza_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabCardView"
        android:layout_marginTop="-5dp"
        android:layout_marginHorizontal="12dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:saveEnabled="true"
            android:numStars="5"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_centerVertical="true"
            android:theme="@style/RatingBar"/>

        <ImageView
            android:src="@drawable/location_minus"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/kmText"
            android:layout_alignParentEnd="false"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:id="@+id/kmText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/_2_km_away"
            android:textSize="11sp"
            android:fontFamily="@font/popinregular"
            android:textColor="@color/black"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>