<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileScreen.ProfileFragment"
    android:background="@color/white">


    <TextView
        android:id="@+id/profileTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/profile"
        android:textSize="18sp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/black"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toBottomOf="@+id/profileTxt"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="18dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/girl_profile"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/customerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/amelia_cassian"
        android:fontFamily="@font/popinregular"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileCv"/>

    <LinearLayout
        android:id="@+id/llAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerName">

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_sample"
            android:textColor="@color/black500"
            android:textSize="12sp"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="2dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/arrow_down_1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/contactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="458-419-7182"
        android:textSize="12sp"
        android:textColor="@color/black500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llAddress"/>

    <RelativeLayout
        android:id="@+id/rlPaymentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactNumber"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/paymentmethod_icon"/>

        <TextView
            android:id="@+id/title"
            android:text="Payment Methods"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/popinregular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/img"/>

        <TextView
            android:id="@+id/titleContent"
            android:text="2 cards added"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@+id/img"
            android:layout_below="@+id/title"
            android:fontFamily="@font/popinregular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlDeliveryAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlPaymentType"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/deliveryadd_icon"/>

        <TextView
            android:id="@+id/title1"
            android:text="Delivery address"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/popinregular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/img1"/>

        <TextView
            android:id="@+id/titleContent1"
            android:text="@string/add_sample"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@+id/img1"
            android:layout_below="@+id/title1"
            android:fontFamily="@font/popinregular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlDeliveryAddress"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp">

        <ImageView
            android:id="@+id/img2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/settings_icon"/>

        <TextView
            android:id="@+id/title2"
            android:text="Settings"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/popinregular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/img2"/>

        <LinearLayout
            android:id="@+id/optionsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/img2"
            android:layout_below="@+id/title2">

            <TextView
                android:id="@+id/titleContent2"
                android:text="Notification"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:fontFamily="@font/popinregular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:layout_marginHorizontal="4dp"/>

            <TextView
                android:id="@+id/titleContent3"
                android:text="FAQ"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:fontFamily="@font/popinregular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:layout_marginHorizontal="4dp"/>

            <TextView
                android:id="@+id/titleContent4"
                android:text="Contact"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:fontFamily="@font/popinregular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>



    </RelativeLayout>

    <ImageView
        android:id="@+id/logoutBtn"
        android:src="@drawable/logout_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlSettings"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>